2001-10-30  Richard Earnshaw (rearnsha@arm.com)

	* elf.c (_bfd_elf_make_section_from_shdr): Set the LMA based on the
	p_paddr of the segment that contains it.

2001-10-29  Kazu Hirata  <kazu@hxi.com>

	* README: Fix a typo.

2001-10-24  Richard Henderson  <rth@redhat.com>

	* peXXigen.c (_bfd_XX_print_private_bfd_data_common): Copy
	timestamp to time_t for ctime.

2001-10-24  Hans-Peter Nilsson  <hp@axis.com>

	* elf32-cris.c (cris_reloc_type_lookup): Change loop to use
	unsigned, increasing index.

2001-10-23  H.J. Lu <hjl@gnu.org>

	* elf32-mips.c (_bfd_mips_elf_modify_segment_map): Check
	m != NULL before accessing it.

2001-10-23  Alan Modra  <amodra@bigpond.net.au>

	* elflink.h (elf_link_input_bfd): Zero the reloc instead of doing
	bfd_reloc_type_lookup (bfd, BFD_RELOC_NONE) as bfd_reloc_type_lookup
	doesn't accept BFD_RELOC_* on some targets, eg. hppa.

	* elf32-hppa.c (elf32_hppa_link_hash_entry): Remove plt_abs.
	(hppa_link_hash_newfunc): Likewise.
	(elf32_hppa_finish_dynamic_symbol): Likewise.
	(allocate_dynrelocs): Always allocate .got relocs if shared.
	(elf32_hppa_relocate_section): Output them too.  Similarly
	consolidate .plt reloc code, and no longer initialise .plt
	when a reloc is output.
	(elf32_hppa_finish_dynamic_symbol): Only initialise .plt entries
	when no reloc is output.

	From Herbert Xu <herbert@gondor.apana.org.au>
	* elf32-hppa.c (final_link_relocate): Call bfd_set_error for
	unreachable branches.

2001-10-22  H.J. Lu <hjl@gnu.org>

	* configure.in (WIN32LIBADD): Use -L../libiberty for
	mips*-*-linux*.
	* configure: Rebuild.

2001-10-21  H.J. Lu <hjl@gnu.org>

	* configure.in (WIN32LIBADD): Include -L../libiberty/pic -liberty
	if shared library is enabled only for Linux hosts.
	* configure: Rebuild.

2001-10-21  H.J. Lu <hjl@gnu.org>

	* configure.in (WIN32LIBADD): Check if PICFLAG is defined in
	../libiberty/Makefile instead of $enable_shared.
	* configure: Rebuild.

2001-10-21  H.J. Lu <hjl@gnu.org>
